# mkslides

./: .editorconfig  .envrc  .gitignore  .gitmodules  .mdslides.yml  .pre-commit-config.yaml  .prettierignore  .revealpy.yml  .yamllint.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  cli-help-output-to-docs.py  devenv.nix  devenv.yaml  index-theme.css  mkslides.yml  pyproject.toml  requirements.txt  tests.sh  theme-index.css  theme-slides.css  theme.css
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  pull-request.yml  test-deploy.yml
LICENSES/: LicenseRef-GitHubLogoTerms.txt  LicenseRef-PythonSoftwareFoundationLogoTerms.txt  MIT.txt
assets/: default.mdslides.yml  default.revealpy.yml  mkslides.default.yml
assets/styles/: index.css
assets/templates/: index.html.jinja  slideshow.html.jinja
demo/: c1.md  c2.md
demo/debug/: c3.md
docs/: about.md  index.md  test.md
slides/: index.md
src/: config.py  constants.py  copier.py  main.py  markupgenerator.py
src/mdslides-reveal/: __main__.py  config.py  constants.py  copier.py  markupgenerator.py
src/mkslides/: __init__.py  __main__.py  build.py  config.py  constants.py  markupgenerator.py  mdfiletoprocess.py  navtree.py  preprocess.py  serve.py  urltype.py  utils.py
src/mkslides-reveal/: __init__.py  __main__.py  config.py  constants.py  markupgenerator.py
src/mkslides/assets/: README.md
src/mkslides/assets/templates/: index.html.jinja  slideshow.html.jinja
src/mkslides_reveal/: __init__.py  __main__.py  config.py  constants.py  markupgenerator.py
test/: c0.md  c1.md  c2.md  c3.md
test/debug/: c3.md
tests/: README.md  conftest.py  test_base.py  test_emojis.py  test_frontmatter.py  test_index.py  test_markdown_data_options.py  test_navtree.py  test_plugins.py  test_preprocess.py  test_revealjs_options.py  test_static.py  test_strict.py  test_themes.py  todo.md  utils.py
tests/baseline/: test_baseline.py
tests/baseline/docs/somefolder/: randomfile-2.txt
tests/baseline/slides/: randomfile-1.txt  someslides-1.md
tests/baseline/slides/extra/: randomfile-3.txt
tests/favicons/: absolute_url_index_favicon_path-config.yml  absolute_url_slideshow_favicon_path-config.yml  local_index_favicon_path-config.yml  local_slideshow_favicon_path-config.yml  test_favicons.py
tests/favicons/slides/somefolder/: someslides-3.md  someslides-4.md
tests/frontmatter/: frontmatter_overrides_options-config.yml  test_frontmatter.py
tests/frontmatter/slides/: someslides-1.md  someslides-2.md
tests/frontmatter/slides/somefolder/: someslides-3.md  someslides-4.md
tests/images/: test_images.py
tests/images/slides/: someslides-1.md
tests/images/slides/somefolder/: someslides-2.md
tests/index/: index_no_banner-config.yml  index_title-config.yml  test_index.py
tests/markdown_data_options/: revealjs_markdown_data_options-config.yml  test_markdown_data_options.py
tests/navtree/: navtree-config.yml  navtree-files-not-in-folder-config.yml  navtree-files-not-in-nav-config.yml  test_navtree.py
tests/plugins/: plugins-config.yml  test_plugins.py
tests/preprocessing/: preprocessing-config.yml  replace_at_by_a.py  replace_at_by_b.py  replace_ats.py  test_preprocessing.py
tests/preprocessing/docs/: someslides-1.md  someslides-2.md
tests/preprocessing/slides/: someslides-1.md  someslides-2.md
tests/preprocessing/slides/category-1/: someslides-2.md
tests/relative_links/: test_relative_links.py
tests/relative_links/slides/: someslides-1.md
tests/relative_links/slides-fail-2/: someslides-1.md
tests/relative_links/slides-non-existing-relative-a-link/: someslides-1.md
tests/relative_links/slides-non-existing-relative-img-link/: someslides-1.md
tests/relative_links/slides-non-existing-relative-md-image-link/: someslides-1.md
tests/relative_links/slides/some-folder/: someslides-2.md
tests/relative_slideshow_links/: test_relative_slideshow_links.py
tests/relative_slideshow_links/docs/: someslides-1.md
tests/relative_slideshow_links/slides/: someslides-1.md  someslides-2.md
tests/relative_slideshow_links/slides-fail-1/: someslides-1.md
tests/relative_slideshow_links/slides-fail-2/: someslides-1.md
tests/revealjs_options/: revealjs_integer_options-config.yml  revealjs_string_options-config.yml  test_revealjs_options.py
tests/single_md_in_folder/: test_single_md_in_folder.py
tests/strict/: test_strict.py
tests/strict/docs/: someslides-1.md
tests/test_configs/: test_absolute_url_index_theme_path.yml  test_frontmatter_overrides_options.yml  test_index_title.yml  test_local_index_favicon_path.yml  test_local_index_theme_path.yml  test_local_slideshow_favicon_path.yml  test_local_slideshow_theme_path.yml  test_plugins.yml  test_preprocess.yml  test_revealjs_markdown_data_options.yml  test_static.yml
tests/test_files/: frontmatter.md  indentation.md  someslides.md
tests/test_files/somefolder/: someslides.md
tests/test_files/video/: demo.webm
tests/text/: test_emojis.py
tests/text/slides/: someslides-1.md  someslides-2.md
tests/themes/: absolute_url_index_theme_path-config.yml  absolute_url_slideshow_theme_path-config.yml  builtin_slideshow_theme_path-config.yml  local_index_theme_path-config.yml  local_slideshow_theme_path-config.yml  test_themes.py
tests/themes/docs/somefolder/: someslides-2.md
tests/themes/slides/somefolder/: highlight-theme-3.css  someslides-3.md  someslides-4.md
